[tool.poetry]
name = "load-assistant"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{ include = "app" }]
authors = ["Laura Fernandez Galindo <laura.fdezgalindo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11.12"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
sqlalchemy = ">=2.0.42,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pydantic = ">=2.11.7,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
python-dateutil = "^2.9.0.post0"
streamlit = "^1.47.1"
plotly = "^6.2.0"
streamlit-aggrid = "^1.1.7"
requests = "^2.32.4"
pandas = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.7"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
